# Kyivan

./: .gitignore  README.md  build_char_tokenizer.py  char_analysis.py  check_brackets.py  collator.py  config.py  eda_stats.txt  inference.py  push_to_hf.py  pyproject.toml  rnc_missing_dates.md  thesis_text.txt  train.py
data/: char_vocab.json  tokenizer_config.json
data/NKRYA/: nkrya_prepared.jsonl  nkrya_scraped_cleaned.json  process_nkrya_scraped.py
data/Ratushna_Kniga_1986/: 00.txt  00_1653.txt  01.txt  01_1652.txt  02.txt  02_1653.txt  03.txt  03_1653.txt  04.txt  04_1653.txt  05.txt  05_1653.txt  06.txt  06_1653.txt  07.txt  07_1654.txt  08.txt  08_1654.txt  09_1654.txt  10_1654.txt  11_1654.txt  12_1654.txt
data/UD_Old_East_Slavic-RNC/: clean_rnc.py  orv_rnc-ud-dev.conllu  orv_rnc-ud-test.conllu  parse_rnc.py  rnc_cleaned.json  rnc_raw.json
data/UD_Old_East_Slavic-Ruthenian/: check_texts.py  clean_dataset.py  clean_non_polotsk.py  extract_year.py  merge_metadata.py  missing_metadata.txt  parser.py  ruthenian_cleaned.json  (+2 more)
human_readable_datasets/: eval.jsonl  test_a.jsonl  test_b.jsonl
notebooks/: EDA.ipynb
prepared_datasets/: UD_Old_East_Slavic-RNC_prepared.jsonl  UD_Old_East_Slavic-Ruthenian_prepared.jsonl  birchbark_classes_prepared.jsonl  birchbark_prepared.jsonl  bylini_nov_prepared.jsonl  bylini_star_prepared.jsonl  byliny_prepared.jsonl  epigraphica_classes_prepared.jsonl  epigraphica_prepared.jsonl  nkrya_prepared.jsonl  ruthenian_cleaned_prepared.jsonl  torot_prepared.jsonl  ustav_prepared.jsonl
test_eval_datasets/: eval.json  test_b.json
(+210 files in other folders)
