[project]
name = "kyivan"
version = "0.1.0"
description = "Restoring Slavic texts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "ruff>=0.15.21",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "torch>=2.13.0",
    "transformers>=5.13.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[tool.uv]
package = false
